# linkml-scala

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: LOADERS_DUMPERS_PLAN.md
examples/output/: TestSchema.scala
scripts/: check_metamodel_sync.py
src/linkml_scala/: __init__.py  scala_metamodel.py  scala_metamodel.yaml  scala_metamodel_gen.py  scalagen.py
src/linkml_scala.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/linkml_scala/templates/: scala_class.scala.jinja2  scala_codec_implicits.scala.jinja2  scala_codecs.scala.jinja2  scala_companion.scala.jinja2  scala_enum.scala.jinja2  scala_module.scala.jinja2  scala_trait.scala.jinja2
tests/: test_codecs.py  test_e2e_compilation.py  test_metamodel_overlay.py  test_rules.py  test_scalagen.py
tests/input/: example_schema.yaml
